Fixed Surefire plugin to work in Java 11